# finagent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_DEPLOY.md  docker-compose.yml  finagent.db  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
scripts/: finagent-backend.service  finagent-frontend.service  setup_aws.sh
src/: agent_eval.py  api_service.py  list_agents.py  multimodel_trading.py  run_server.py
src/agents/cross_border_finance/: __init__.py  agent.py  blockchain_log.py  compliance.py  frontend.py  lock_engine.py  tax_report.py
src/agents/deepquant/: README.md  agent.py
src/agents/demo/: agent.py
src/agents/model_verify/: agent.py
src/agents/multimodel_trading/: agent.py
src/agents/myob_payroll/: __init__.py  agent.py  auth.py
src/agents/news_yfinance/: agent.py
src/agents/tavily_search/: agent.py
src/agents/weather/: agent.py
src/agents/weather_demo/: agent.py
src/core/: agent_discovery.py  agent_tools.py  chat.py  context.py  logger.py  plugin_base.py  session.py
src/deepquant_backend/: backtest.py  main.py  policy_parser.py  schemas.py  store.py  yfinance_op.py
src/deepquant_backend/backend/data/: policies.json
src/framework/: app.py  auth.py  config.py  init_db.py  models.py  verify_user.py  views.py
src/framework/templates/: base.html  dashboard.html  index.html  login.html  register.html
src/frontend/: app.js  index.html  styles.css
tests/: conftest.py  test_logger_formatting.py
