[project]
name = "finagent"
version = "0.1.0"
description = "Agentic trading and analysis system with pluggable agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "langchain-openai>=1.1.7",
    "langchain[openai]>=1.2.3",
    "langgraph>=1.0.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
    "yfinance>=1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
